# rustclaw

./: .dockerignore  .drone.yml  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  bacon.toml  config.example.toml  dist-workspace.toml  install.sh  release.toml  rustclaw.service  setup-service.sh
.cargo/: config.toml
.github/workflows/: docker-release.yml  release.yml
src/: agent.rs  config.rs  discord.rs  embeddings.rs  main.rs  memory.rs  scheduler.rs  utils.rs  vector_db.rs  vectordb.rs
src/agent/: attachment.rs  mod.rs  preamble.rs  rig_agent.rs  user_info.rs
src/agent/tools/: error.rs  list_schedules.rs  mod.rs  remember.rs  run_command.rs  schedule.rs  send_file.rs  unschedule.rs  weather.rs  web_search.rs
src/discord/: bot.rs  handler.rs  mod.rs  relay.rs  util.rs
src/embeddings/: gemini.rs  local.rs  mod.rs  types.rs
src/entity/: conversations.rs  important.rs  mod.rs
src/memory/: manager.rs  mod.rs
src/scheduler/: cron.rs  mod.rs
src/tools/: error.rs  get_transcript.rs  important.rs  mod.rs  run_command.rs  schedule.rs  search_memory.rs  search_youtube.rs  send_file.rs  send_markdown_table.rs  typst_render.rs  weather.rs  web_fetch.rs  web_news.rs  web_search.rs
