[package]
name = "rustclaw"
version = "1.6.0"
edition = "2024"
repository = "https://github.com/shimaenaga1123/rustclaw"
homepage = "https://github.com/shimaenaga1123/rustclaw"
description = "A lightweight, memory-aware Discord AI assistant powered by Anthropic-compatible APIs, implemented in Rust."
license = "MIT"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["rustls_backend", "client", "gateway", "model", "cache"] }

rig-core = { version = "0.30", default-features = false, features = ["reqwest-rustls"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "time", "signal"] }
tokio-cron-scheduler = "0.15"
futures-util = "0.3"
async-trait = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "fast-rng"] }

chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10.4"
iana-time-zone = "0.1.65"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }
bollard = "0.20"

usearch = "2"

sea-orm-sync = { version = "2.0.0-rc", default-features = false, features = ["rusqlite", "sync", "macros", "schema-sync"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }

[target.'cfg(not(windows))'.dependencies]
fastembed = { version = "5", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }

[profile.release]
strip = true
lto = "thin"
opt-level = 3

[profile.dist]
inherits = "release"
