[package]
name = "rustclaw"
version = "1.8.4"
edition = "2024"
repository = "https://github.com/shimaenaga1123/rustclaw"
homepage = "https://github.com/shimaenaga1123/rustclaw"
description = "A lightweight, memory-aware Discord AI assistant powered by Anthropic-compatible APIs, implemented in Rust."
license = "MIT"

[dependencies]
serenity = { version = "0.12", default-features = false, features = ["rustls_backend", "client", "gateway", "model", "cache"] }

rig-core = { version = "0.30", default-features = false, features = ["reqwest-rustls"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "time", "signal"] }
tokio-cron-scheduler = "0.15"
futures-util = "0.3"
async-trait = "0.1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "fast-rng"] }

chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
chrono-tz = "0.10.4"
iana-time-zone = "0.1.65"

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli"] }
rusty_ytdl = { version = "0.7.4", default-features = false, features = ["search", "rustls-tls"] }
yt-transcript-rs = "0.1.8"
bollard = "0.20"

sys-locale = "0.3"

usearch = "2"

sea-orm-sync = { version = "2.0.0-rc.32", default-features = false, features = ["rusqlite", "sync", "macros", "schema-sync"] }
libsqlite3-sys = { version = "0.35", features = ["bundled"] }
once_cell = "1.21.3"

fastembed = { version = "5", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"] }

[dev-dependencies]
cargo-husky = {version = "1", features = ["precommit-hook", "run-cargo-check", "run-cargo-clippy", "run-cargo-fmt"]}

[profile.release]
strip = true
lto = "thin"
opt-level = 3
panic = "abort"

[profile.dist]
inherits = "release"
